--- a/backend/.env
+++ b/backend/.env
@@ -24,3 +24,5 @@ TWILIO_PHONE_NUMBER=+14704589214  # E.164 format without parentheses or spaces
 
 # Development Mode (set to production to send actual emails)
 NODE_ENV=production
+
+FRONTEND_URL=http://localhost:5173
